[package]
name = "golem-postgresql-runtime"
version = "0.0.1"
authors = ["Miguel Palhas <mpalhas@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
ya-runtime-sdk = { path = "../ya-runtime-sdk/ya-runtime-sdk", version = "0.1", features = ["macros"] }

anyhow = "1.0"
futures = "0.3"
serde = { version = "^1.0", features = ["derive"] }
structopt = "0.3"
tokio = { version = "0.2", features = ["process", "macros", "time"] }
